--- a/src/mainPage/mainPage.module.css
+++ b/src/mainPage/mainPage.module.css
@@ -183,15 +183,12 @@ background: linear-gradient(180deg, #FFFFFF 0%, #8BA9F4 100%);    display: flex;
     height:70%;
     background-color: #8BA9F4;
     border:2px solid white;
-    
-}
-
-.buttonReturn a{
-    text-decoration: none;
     color:white;
     font-size:23px;
     transition: 1s;
+    cursor: pointer;
 }
+
 .buttonReturn:hover{
     transition: 1s;
     box-shadow: 0px 3px 11px 2px whitesmoke;
@@ -221,7 +218,7 @@ h1{
     height: 20%;
     }
 
-    .buttonReturn a{
+    .buttonReturn{
         font-size:34px;
     }
 }
