--- a/src/mainPage/mainPage.module.css
+++ b/src/mainPage/mainPage.module.css
@@ -3,38 +3,48 @@
     --fs-800:1rem;
     --fs-600: 2rem;
     --fs-400:1rem;
+    --fs-300:24px;
+    --fs-200:18px;
 }
 
 @media screen and (min-width:1500px){
     :root{
-    --fs-xl: 160px;
-    --fs-800:128px;
+    --fs-xl: 90px;
+    --fs-800:80px;
     --fs-600: 32px;
-    --fs-400:32px;
+    --fs-400:23px;
+    --fs-300:42px;
+    --fs-200:18px;
 }
 }
 @media  screen and (max-width:1500px){
     :root{
-    --fs-xl: 80px;
-    --fs-800:64px;
+    --fs-xl: 58px;
+    --fs-800:50px;
     --fs-600: 28.8px;
-    --fs-400:28.8px;
+    --fs-400:23px;
+    --fs-300:32px;
+    --fs-200:14px;
 }
 }
 @media  screen and (max-width:900px){
     :root{
-    --fs-xl: 64px;
+    --fs-xl: 48px;
     --fs-800:48px;
-    --fs-600: 28.8px;
-    --fs-400:28.8px;
+    --fs-600: 25px;
+    --fs-400:18px;
+    --fs-300:26px;
+    --fs-200:12px;
 }
 }
 @media  screen and (max-width:800px){
     :root{
-    --fs-xl: 48px;
+    --fs-xl: 40px;
     --fs-800:32px;
     --fs-600: 20.8px;
-    --fs-400:20.8px;
+    --fs-400:18px;
+    --fs-300:22px;
+    --fs-200:18px;
 }
 }
 @media  screen and (max-width:500px){
@@ -43,6 +53,8 @@
     --fs-800:27.2px;
     --fs-600: 16px;
     --fs-400:16px;
+    --fs-300:20px;
+    --fs-200:13px;
 }
 }
 @media  screen and (max-width:400px){
@@ -51,6 +63,8 @@
     --fs-800:16px;
     --fs-600: 9.6px;
     --fs-400:9.6px;
+    --fs-300:20px;
+    --fs-200:14px;
 }
 }
 .todayDisplayContainer img{
@@ -63,19 +77,19 @@
 .mainFrame{
 background: linear-gradient(180deg, #FFFFFF 0%, #8BA9F4 100%);    display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
+    padding-top:1rem;
+    /* height: 100%; */
 }
 /* today Display */
 .todayDisplayContainer{
     /* background-color: pink; */
-    width:90%;
+    width:80%;
     height: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
-   
-   
 }
 .todayDisplayMain{
     background-color: aquamarine;
@@ -106,8 +120,7 @@ background: linear-gradient(180deg, #FFFFFF 0%, #8BA9F4 100%);    display: flex;
     
 }
 .todayInfoLocation{
-    /* background-color: aqua; */
-    
+    /* background-color: aqua; */ 
     text-align: center;
     width:95%;
     height:20%;
@@ -164,19 +177,155 @@ background: linear-gradient(180deg, #FFFFFF 0%, #8BA9F4 100%);    display: flex;
     font-size:var(--fs-400);
 }
 /* end of today Display */
+/* start of individual container */
 .allWeekWeatherContainer{
-    background-color: orange;
+    /* background-color: orange; */
     width:90%;
-    height: 40%;
+    height: auto;
+    overflow:scroll;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: column;
+
 }
-/* start of return container */
-.returnContainer{
-    /* background-color: yellow; */
+.individualWeatherMain{
+    background-color: white;
     width:90%;
-    height:8%;
+    height: 100%;
+    border:4px solid #8BA9F4;
+    border-radius:25px;
+    margin:.5rem;
+    overflow: hidden;   
+}
+.mainInfoWeatherMain{
+    /* background-color: aquamarine; */
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
+     -webkit-transition: all .25s ease;
+	-moz-transition: all .25s ease;
+	-ms-transition: all .25s ease;
+	-o-transition: all .25s ease;
+	transition: all .25s ease;
+    overflow: hidden;
+}
+.extraInfoWeatherMain{
+    /* background-color: red; */
+    height: 60px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center; 
+    /* transition: 1s; */
+    -webkit-transition: all .25s ease;
+	-moz-transition: all .25s ease;
+	-ms-transition: all .25s ease;
+	-o-transition: all .25s ease;
+	transition: all .25s ease;
+    visibility: visible;
+    overflow: hidden;
+}
+.displayShow{
+    visibility: visible;
+}
+.logoContainerIndividual{
+    /* background-color: blue; */
+    height: 95%;
+    width:20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.logoContainerIndividual img{
+    /* background-color: orange; */
+    max-width:100%;
+    height: auto;
+    object-fit: contain;
+}
+.otherContainerIndividual{
+    /* background-color: pink; */
+    height: 95%;
+    width:70%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* overflow: hidden; */
+}
+.tempContainerIndividual{
+    /* background-color: aqua; */
+    height: 100%;
+    width:auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:var(--fs-300);
+}
+.tempContainerIndividual p{
+    /* background-color: yellow; */
+    margin: 0px;
+}
+.otherInfoContainerIndividual{
+    /* background-color: yellow; */
+    height: 100%;
+    width:auto;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
+.otherInfoContainerIndividual p{
+    /* background-color: pink; */
+    margin: 2px;
+    padding:2px;
+    font-size: medium; 
+}
+.moreInfoLogoContainerIndividual{
+    /* background-color: orange; */
+    height: 100%;
+    width:20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.moreInfoLogoContainerIndividual button{
+    padding:0px;
+    border: none;
+    background-color: transparent;
+}
+
+.symbolItSelf{
+    /* background-color: aqua; */
+    font-size: xx-large; 
+    transition: 1s; 
+    margin: 0px;
+}
+.symbolItSelf:hover{
+    color: #8BA9F4;
+    transition: 0.5s; 
+}
+.symbolItSelfCross{
+    /* background-color: pink; */
+    font-size: xx-large;
+    transform: rotate(45deg); 
+    transition: 1s; 
+}
+.symbolItSelfCross:hover{
+    color: #FF9999; 
+    transition: 0.5s; 
+}
+
+/* end of individual container */
+/* start of return container */
+.returnContainer{
+    width:90%;
+    height:70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 .buttonReturn{
     width:50%;
@@ -184,7 +333,7 @@ background: linear-gradient(180deg, #FFFFFF 0%, #8BA9F4 100%);    display: flex;
     background-color: #8BA9F4;
     border:2px solid white;
     color:white;
-    font-size:23px;
+    font-size:x-large;
     transition: 1s;
     cursor: pointer;
 }
@@ -203,24 +352,45 @@ background: linear-gradient(180deg, #FFFFFF 0%, #8BA9F4 100%);    display: flex;
 h1{
     margin:0px;
 }
+.hiddingThings{
+    visibility: hidden;
+    height: 0;
+    transition: 1s;
+}
+
 @media screen and (min-width:800px){
     .todayDisplayContainer{
     /* background-color: yellow; */
-        width:90%;
-        height: 60%;
+        width:60%;
+        /* height: 40%; */
         margin-top:.5rem;
 
     }
 
     .allWeekWeatherContainer{
-    background-color: orange;
-    width:90%;
-    height: 20%;
+        /* background-color: orange; */
+        width:70%;
+        height: auto;
+    }
+    .otherInfoContainerIndividual{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        /* font-size: var(--fs-200); */
+        font-size: large;
+    }
+    .otherInfoContainerIndividual p{
+        font-size: large;
     }
 
-    .buttonReturn{
-        font-size:34px;
+    .extraInfoWeatherMain p{
+        font-size: x-large;
     }
+
+    /* .buttonReturn{
+        font-size:34px;
+    } */
 }
 @media screen and (max-width:700px){
     /* .todayInfoLocation{
