--- a/src/mainPage/mainPage.module.css
+++ b/src/mainPage/mainPage.module.css
@@ -95,6 +95,7 @@ background: linear-gradient(180deg, #FFFFFF 0%, #8BA9F4 100%);    display: flex;
     background-color: aquamarine;
     width:100%;
     height: 99%;
+    max-height: 500px;
     border-radius:50px;
     overflow: hidden;
     display: flex;
@@ -242,7 +243,8 @@ background: linear-gradient(180deg, #FFFFFF 0%, #8BA9F4 100%);    display: flex;
 .logoContainerIndividual img{
     /* background-color: orange; */
     max-width:100%;
-    height: auto;
+    /* max-height: 60px; */
+    /* height: 60px; */
     object-fit: contain;
 }
 .otherContainerIndividual{
@@ -394,35 +396,21 @@ h1{
         font-size:34px;
     } */
 }
-@media screen and (max-width:700px){
-    /* .todayInfoLocation{
-        font-size:16px;
-        /* background-color: pink; 
-    } 
-     .todayInfoTemp{
-        font-size: 42px;
-    } */
-    /* .todayInfoCondition{
-    font-size: 32px;
-    text-transform: uppercase;
-    } */
-    /* .todayInfoDay{
-        font-size: 18px;
-        text-transform: capitalize;
+@media screen and (max-width:800px){
+    .todayDisplayMain{ 
+        max-height: 300px; 
     }
-    .todayInfoDate{
-        font-size:18px;
-    } */
 }
-@media screen and (max-width:600px){
-    /* .todayInfoLocation{
-        font-size:16px;
-        background-color: pink;
-    } */
-    /* .todayInfoTemp{
-        font-size: 32px;
-    } */
+@media screen and (max-width:500px){
+    .todayInfo{
+        top:40%;
+        left:28%;   
+    }
+    .todayDisplayMain{ 
+        max-height: 300px; 
+    }
 }
+
 
 @media screen and (max-width:400px){
     /* .todayInfoLocation{
