--- a/src/mainPage/mainPage.module.css
+++ b/src/mainPage/mainPage.module.css
@@ -70,7 +70,7 @@
 .todayDisplayContainer img{
     max-width:100%;
     height: 100%;
-    width: 100%;
+    /* width: 100%; */
     max-height: 100%;
     object-fit: cover;
 }
@@ -92,7 +92,7 @@ background: linear-gradient(180deg, #FFFFFF 0%, #8BA9F4 100%);    display: flex;
     align-items: center;
 }
 .todayDisplayMain{
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     width:100%;
     height: 99%;
     max-height: 500px;
