--- a/src/mainPage/mainPage.module.css
+++ b/src/mainPage/mainPage.module.css
@@ -67,6 +67,16 @@
     --fs-200:12px;
 }
 }
+/* loading */
+.loadingContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#8BA9F4;
+    width:100vw;
+    height: 100vh;
+}
+/* end of loading */
 .todayDisplayContainer img{
     max-width:100%;
     height: 100%;
@@ -196,7 +206,7 @@ background: linear-gradient(180deg, #FFFFFF 0%, #8BA9F4 100%);    display: flex;
     height: 100%;
     border:4px solid #8BA9F4;
     border-radius:25px;
-    margin:.5rem;
+    margin:1rem;
     overflow: hidden;   
 }
 .mainInfoWeatherMain{
